Creates Mosaic View Mode and fixes some alignement issues with previous ones.

--- a/src/views/admin/scss/_view-mode-cards.scss
+++ b/src/views/admin/scss/_view-mode-cards.scss
@@ -140,7 +140,7 @@
         .metadata-title {
             flex-shrink: 0;
             padding: 0.6em 7em 0.5em 2.75em;
-            min-height: 40px;
+            min-height: 1.5em;
             position: relative;
             font-size: 1em !important; 
             text-overflow: ellipsis;
